--- a/enrollment_metrics_dashboard/index.html
+++ b/enrollment_metrics_dashboard/index.html
@@ -713,10 +713,8 @@
                         : 0;
 
                     // Calculate period churn rate: Total Withdrawals / Average Headcount
-                    const avgHeadcount = churnRateData.length > 0
-                        ? churnRateData.reduce((s, d) => s + d.headcount, 0) / churnRateData.length
-                        : 0;
-                    const periodChurnRate = avgHeadcount > 0 ? (filteredTotalWithdrawals / avgHeadcount * 100) : 0;
+                    // Annualized churn rate = avg monthly rate × 12
+                    const annualizedChurnRate = avgChurnRate * 12;
 
                     return React.createElement('div', { className: "space-y-6" }, [
                         // Churn Rate Card
@@ -725,7 +723,7 @@
                             React.createElement('p', { key: 'd', className: "text-xs text-gray-500 mb-4" }, 'Churn Rate = Withdrawals / Beginning-of-Month Headcount × 100%. Click legend to toggle. Drag brush to zoom.'),
                             React.createElement('div', { key: 'cards', className: "grid md:grid-cols-3 gap-4 mb-4" }, [
                                 React.createElement(StatCard, { key: 'avg', title: "Avg Monthly Churn Rate", value: `${avgChurnRate.toFixed(2)}%`, subtitle: "Selected period average", color: COLORS.warning }),
-                                React.createElement(StatCard, { key: 'period', title: "Period Churn Rate", value: `${periodChurnRate.toFixed(1)}%`, subtitle: `${filteredTotalWithdrawals} withdrawals / ${Math.round(avgHeadcount)} avg headcount`, color: COLORS.danger }),
+                                React.createElement(StatCard, { key: 'annual', title: "Annualized Churn Rate", value: `${annualizedChurnRate.toFixed(1)}%`, subtitle: "Monthly avg × 12", color: COLORS.danger }),
                                 React.createElement(StatCard, { key: 'tw', title: "Total Withdrawals", value: filteredTotalWithdrawals.toLocaleString(), subtitle: "Selected period", color: COLORS.danger }),
                             ]),
                             React.createElement(ResponsiveContainer, { key: 'c', width: "100%", height: 350 },
